Fixes toggle label alignment in settings as well as now handles wrapping gracefully

--- a/_inc/client/components/forms/styles.scss
+++ b/_inc/client/components/forms/styles.scss
@@ -53,9 +53,9 @@
 }
 
 .jp-form-toggle-explanation {
-	margin-left: rem( 10px );
+	display: block;
+	margin-left: rem( 36px );
 	font-size: rem( 14px );
-	line-height: 2;
 	word-break: break-word;
 	vertical-align: middle;
 }
